tests/js/success/cfg_array2.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ***************************************************************************** */
var a = [,];
var b = [,,,];
var c = [1,];
var d = [1,,,];
var e = [,2];
var f = [,,,4];
var g = [1,,3,,5];

